# rust_py

./: .gitignore  Cargo.toml  Makefile  README.md  architecture.md  pyproject.toml
docs/: conf.py  index.rst
rust_py/: __init__.py  example.py
