[project]
name            = "rust_py"
version         = "0.0.1"
description     = "blah"
readme          = "README.md"
requires-python = ">=3.10"
license         = {file = "LICENSE"}
keywords        = []
authors         = [
  {email = "jgrey4296@gmail.com"},
  {name  = "J Grey"}
]
classifiers     = [
  "Programming Language :: Python"
]

dependencies   = []

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
]

[project.urls]
homepage      = "https://github.com/jgrey4296/rust_py"
documentation = "https://readthedocs.org/rust_py"
repository    = "https://github.com"
changelog     = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
# spam-cli      = "spam:main_cli"

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

[build-system]
requires = [
         "setuptools",
         "wheel"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ['rust_py']
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]
rust_py = ["rust_py.so"]


[tool.setuptools.exclude-package-data]



[tool.pyright]
# strict = acab.*
verboseOutput               = true
typeCheckingMode            = "strict"
pythonVersion               = "3.10"

reportUnusedImport          = false
reportAssertAlwaysTrue      = "information"
reportMissingParameterType  = "warning"
reportMissingTypeArgument   = "warning"
reportMissingTypeStubs      = "warning"
reportUnknownMemberType     = "warning"
reportUnknownParameterType  = "information"
reportUnknownVariableType   = "warning"
reportUnnecessaryCast       = "information"
reportUnnecessaryIsInstance = "warning"

[tool.pytest.ini_options]
log_cli       = false
log_level     = "DEBUG"
log_cli_level = "DEBUG"
